--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ colorama==0.4.6
 decorator==5.1.1
 dill==0.3.8
 Django==4.2.13
+django-debug-toolbar==4.4.2
 executing==2.0.1
 ipython==8.24.0
 isort==5.13.2
@@ -15,6 +16,7 @@ parso==0.8.4
 pillow==10.3.0
 platformdirs==4.2.2
 prompt-toolkit==3.0.43
+psycopg==3.2.1
 pure-eval==0.2.2
 Pygments==2.18.0
 pylint==3.2.2
