--- a/requirements.txt
+++ b/requirements.txt
@@ -16,7 +16,7 @@ parso==0.8.4
 pillow==10.3.0
 platformdirs==4.2.2
 prompt-toolkit==3.0.43
-psycopg==3.2.1
+psycopg2==2.9.9
 pure-eval==0.2.2
 Pygments==2.18.0
 pylint==3.2.2
